# pwcracker

./: .gitignore  CMakeLists.txt  README.md  project_proposal.md
.devcontainer/: Dockerfile  devcontainer.json
data/: dictionary.txt  easy_shadow.txt  hard_shadow.txt  medium_shadow.txt  test_hashed_bcrypt.txt  test_hashed_md5.txt  test_hashed_sha256.txt  test_pws_salted.txt  test_rainbow_table.txt
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
docs/: initial_research.md  shadow-files.md
scripts/: hash_passwords_bcrypt.sh  hash_passwords_md5.sh  hash_passwords_sha256.sh
src/: CMakeLists.txt  benchmark.c  benchmark.h  brute_force.c  brute_force.h  bruteforce.c  cli.c  cli.h  dictionary.c  dictionary.h  main.c  main.cpp  rainbow.c  rainbow.h  shadow.c  shadow.h  util.c  util.h
test/: CMakeLists.txt  test_brute_force.c  test_cli.c  test_rainbow.c  test_rainbow_table.c
utils/: hashing.h  shadow.h
